<resources>
    <string name="app_name">VoiceCalculator</string>

    <!-- Calculator buttons -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="caret">^</string>
    <string name="equal_sign">=</string>
    <string name="dot">.</string>
    <string name="bracket_start">(</string>
    <string name="bracket_end">)</string>
    <string name="backspace">⌫</string>
    <string name="c">C</string>

    <!-- Other buttons -->
    <string name="clear_history_button">Clear history</string>

    <!-- Toolbar titles -->
    <string name="microphone">Microphone</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
</resources>
